계산기로 계산하기

--- a/app/src/main/res/drawable/button_backgroud.xml
+++ b/app/src/main/res/drawable/button_backgroud.xml
@@ -14,13 +14,13 @@
 
         </shape>
 
-
     </item>
 
-
-
-
-
-
-
 </ripple>
+
+<!--
+ripple : 터치된 부분을 시점으로 퍼지면서 색이 변하는 효과
+item : 배경이 되는 부분을 꾸미는 부분
+
+
+-->
