--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="1" />
 
+    <TextView
+        android:id="@+id/expressionTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="15dp"
+        android:gravity="end"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:gravity="end"
+        android:textColor="#aaaaaa"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/keypadLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     <TableLayout
         android:id="@+id/keypadLayout"
         android:layout_width="0dp"
@@ -36,7 +65,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/ClearBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="clearButtonClicked"
@@ -45,20 +74,21 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
-                android:clickable="false"
-                android:enabled="false"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="()"
                 android:textColor="@color/green"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnModulo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -68,8 +98,9 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnDiv"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -83,33 +114,35 @@
 
 
         <TableRow android:layout_weight="1">
-            <androidx.appcompat.widget.AppCompatButton
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn7"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
-                android:textColor="@color/textColor"
                 android:text="7"
+                android:textColor="@color/textColor"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
-                android:clickable="false"
-                android:enabled="false"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="8"
                 android:textColor="@color/textColor"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -119,8 +152,9 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnMulti"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -132,9 +166,11 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -143,20 +179,21 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
-                android:clickable="false"
-                android:enabled="false"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="5"
                 android:textColor="@color/textColor"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -166,8 +203,9 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnMinus"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -179,10 +217,12 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
 
+                android:id="@+id/btn1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -191,20 +231,21 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
-                android:clickable="false"
-                android:enabled="false"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="2"
                 android:textColor="@color/textColor"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -214,8 +255,9 @@
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnPlus"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
@@ -228,24 +270,25 @@
 
         <TableRow android:layout_weight="1">
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ImageButton
                 android:id="@+id/historyBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="historyButtonClicked"
+                android:src="@drawable/ic_baseline_history_24"
                 android:stateListAnimator="@null"
                 android:text=""
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
-                android:clickable="false"
-                android:enabled="false"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="0"
                 android:textColor="@color/textColor"
@@ -253,26 +296,25 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_backgroud"
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
-                android:enabled="false"
-                android:clickable="false"
                 android:text="."
                 android:textColor="@color/textColor"
                 android:textSize="24dp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/resultBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
-                android:background="@drawable/button_backgroud"
+                android:background="@drawable/button_background_green"
                 android:onClick="resultButtonClicked"
                 android:stateListAnimator="@null"
                 android:text="="
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 android:textSize="24dp" />
 
         </TableRow>
