--- a/app/src/main/res/drawable/button_background_green.xml
+++ b/app/src/main/res/drawable/button_background_green.xml
@@ -18,3 +18,11 @@
     </item>
 
 </ripple>
+
+<!--
+ripple : 잔물결,파문이라는 뜻으로 클릭 시 물결같은 클릭 이펙트가 발생하도록 해준다.
+ - color : 클릭 시 이펙트에 사용할 배경색
+ - item : Background로 사용될 아이템 , 다양한 모양으로 설정 가능 item을 등록하지 않을 경우
+ 경계가 없는 리플 이펙트 발생
+
+-->
